# tree-sitter-tcl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tcl.pc.in
bindings/go/: binding.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tcl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
src/: grammar.json  node-types.json  parser.c
